seaqt/QtWidgets/gen_qcolumnview.nim


proc fcQColumnView_new(parent: pointer): ptr cQColumnView {.importc: "QColumnView_new".}
proc fcQColumnView_new2(): ptr cQColumnView {.importc: "QColumnView_new2".}
proc fcQColumnView_metaObject(self: pointer, ): pointer {.importc: "QColumnView_metaObject".}
proc fcQColumnView_metacast(self: pointer, param1: cstring): pointer {.importc: "QColumnView_metacast".}
proc fcQColumnView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QColumnView_metacall".}
proc fcQColumnView_tr(s: cstring): struct_miqt_string {.importc: "QColumnView_tr".}
proc fcQColumnView_updatePreviewWidget(self: pointer, index: pointer): void {.importc: "QColumnView_updatePreviewWidget".}
proc fcQColumnView_connect_updatePreviewWidget(self: pointer, slot: int) {.importc: "QColumnView_connect_updatePreviewWidget".}
proc fcQColumnView_indexAt(self: pointer, point: pointer): pointer {.importc: "QColumnView_indexAt".}
proc fcQColumnView_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QColumnView_scrollTo".}
proc fcQColumnView_sizeHint(self: pointer, ): pointer {.importc: "QColumnView_sizeHint".}
proc fcQColumnView_visualRect(self: pointer, index: pointer): pointer {.importc: "QColumnView_visualRect".}
proc fcQColumnView_setModel(self: pointer, model: pointer): void {.importc: "QColumnView_setModel".}
proc fcQColumnView_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QColumnView_setSelectionModel".}
proc fcQColumnView_setRootIndex(self: pointer, index: pointer): void {.importc: "QColumnView_setRootIndex".}
proc fcQColumnView_selectAll(self: pointer, ): void {.importc: "QColumnView_selectAll".}
proc fcQColumnView_setResizeGripsVisible(self: pointer, visible: bool): void {.importc: "QColumnView_setResizeGripsVisible".}
proc fcQColumnView_resizeGripsVisible(self: pointer, ): bool {.importc: "QColumnView_resizeGripsVisible".}
proc fcQColumnView_previewWidget(self: pointer, ): pointer {.importc: "QColumnView_previewWidget".}
proc fcQColumnView_setPreviewWidget(self: pointer, widget: pointer): void {.importc: "QColumnView_setPreviewWidget".}
proc fcQColumnView_setColumnWidths(self: pointer, list: struct_miqt_array): void {.importc: "QColumnView_setColumnWidths".}
proc fcQColumnView_columnWidths(self: pointer, ): struct_miqt_array {.importc: "QColumnView_columnWidths".}
proc fcQColumnView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QColumnView_tr2".}
proc fcQColumnView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QColumnView_tr3".}
proc fQColumnView_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_metaObject".}
proc fcQColumnView_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_metaObject".}
proc fQColumnView_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QColumnView_virtualbase_metacast".}
proc fcQColumnView_override_virtual_metacast(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_metacast".}
proc fQColumnView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QColumnView_virtualbase_metacall".}
proc fcQColumnView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_metacall".}
proc fQColumnView_virtualbase_indexAt(self: pointer, point: pointer): pointer{.importc: "QColumnView_virtualbase_indexAt".}
proc fcQColumnView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_indexAt".}
proc fQColumnView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QColumnView_virtualbase_scrollTo".}
proc fcQColumnView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_scrollTo".}
proc fQColumnView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QColumnView_virtualbase_sizeHint".}
proc fcQColumnView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_sizeHint".}
proc fQColumnView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QColumnView_virtualbase_visualRect".}
proc fcQColumnView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_visualRect".}
proc fQColumnView_virtualbase_setModel(self: pointer, model: pointer): void{.importc: "QColumnView_virtualbase_setModel".}
proc fcQColumnView_override_virtual_setModel(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setModel".}
proc fQColumnView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QColumnView_virtualbase_setSelectionModel".}
proc fcQColumnView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setSelectionModel".}
proc fQColumnView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QColumnView_virtualbase_setRootIndex".}
proc fcQColumnView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setRootIndex".}
proc fQColumnView_virtualbase_selectAll(self: pointer, ): void{.importc: "QColumnView_virtualbase_selectAll".}
proc fcQColumnView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_selectAll".}
proc fQColumnView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QColumnView_virtualbase_isIndexHidden".}
proc fcQColumnView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_isIndexHidden".}
proc fQColumnView_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QColumnView_virtualbase_moveCursor".}
proc fcQColumnView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_moveCursor".}
proc fQColumnView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QColumnView_virtualbase_resizeEvent".}
proc fcQColumnView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_resizeEvent".}
proc fQColumnView_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QColumnView_virtualbase_setSelection".}
proc fcQColumnView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_setSelection".}
proc fQColumnView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QColumnView_virtualbase_visualRegionForSelection".}
proc fcQColumnView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_visualRegionForSelection".}
proc fQColumnView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QColumnView_virtualbase_horizontalOffset".}
proc fcQColumnView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_horizontalOffset".}
proc fQColumnView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QColumnView_virtualbase_verticalOffset".}
proc fcQColumnView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_verticalOffset".}
proc fQColumnView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QColumnView_virtualbase_rowsInserted".}
proc fcQColumnView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_rowsInserted".}
proc fQColumnView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QColumnView_virtualbase_currentChanged".}
proc fcQColumnView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_currentChanged".}
proc fQColumnView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QColumnView_virtualbase_scrollContentsBy".}
proc fcQColumnView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_scrollContentsBy".}
proc fQColumnView_virtualbase_createColumn(self: pointer, rootIndex: pointer): pointer{.importc: "QColumnView_virtualbase_createColumn".}
proc fcQColumnView_override_virtual_createColumn(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_createColumn".}
proc fQColumnView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QColumnView_virtualbase_keyboardSearch".}
proc fcQColumnView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_keyboardSearch".}
proc fQColumnView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QColumnView_virtualbase_sizeHintForRow".}
proc fcQColumnView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_sizeHintForRow".}
proc fQColumnView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QColumnView_virtualbase_sizeHintForColumn".}
proc fcQColumnView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_sizeHintForColumn".}
proc fQColumnView_virtualbase_itemDelegateForIndex(self: pointer, index: pointer): pointer{.importc: "QColumnView_virtualbase_itemDelegateForIndex".}
proc fcQColumnView_override_virtual_itemDelegateForIndex(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_itemDelegateForIndex".}
proc fQColumnView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QColumnView_virtualbase_inputMethodQuery".}
proc fcQColumnView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_inputMethodQuery".}
proc fQColumnView_virtualbase_reset(self: pointer, ): void{.importc: "QColumnView_virtualbase_reset".}
proc fcQColumnView_override_virtual_reset(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_reset".}
proc fQColumnView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QColumnView_virtualbase_doItemsLayout".}
proc fcQColumnView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_doItemsLayout".}
proc fQColumnView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QColumnView_virtualbase_dataChanged".}
proc fcQColumnView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_dataChanged".}
proc fQColumnView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QColumnView_virtualbase_rowsAboutToBeRemoved".}
proc fcQColumnView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_rowsAboutToBeRemoved".}
proc fQColumnView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QColumnView_virtualbase_selectionChanged".}
proc fcQColumnView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_selectionChanged".}
proc fQColumnView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QColumnView_virtualbase_updateEditorData".}
proc fcQColumnView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_updateEditorData".}
proc fQColumnView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QColumnView_virtualbase_updateEditorGeometries".}
proc fcQColumnView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QColumnView_override_virtual_updateEditorGeometries".}
proc fQColumnView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QColumnView_virtualbase_updateGeometries".}
